feat: update usage

--- a/app/src/main/res/layout/fragment_refresh_rate.xml
+++ b/app/src/main/res/layout/fragment_refresh_rate.xml
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/settings_usage"
+        android:text="@string/settings_usage1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/goSetting" />
@@ -74,15 +74,28 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/usage"
+        android:id="@+id/goSettingInfo2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:text="@string/settings_usage2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/input_wrapper" />
+
+
+    <TextView
+        android:id="@+id/usage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:text="@string/usage"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/input_wrapper" />
+        app:layout_constraintTop_toBottomOf="@id/goSettingInfo2" />
 
 
     <CheckBox
